# kitshell

./: .gitignore  .prettierignore  LICENSE  README.md  Taskfile.yml  analysis_options.yaml  flake.nix  flutter_jank_metrics_01.json  flutter_rust_bridge.yaml  package.json  pubspec.yaml  slang.yaml  vite.config.ts
.github/: FUNDING.yml
lib/: const.dart  core.dart  injectable.config.dart  injectable.dart  main.dart  objectbox-model.json  objectbox.g.dart
lib/etc/: buildcontext_extension.dart  config.dart  custom_inkwell.dart  panel_enum.dart  utiltity_widget.dart
lib/etc/component/: clickable_panel_component.dart  custom_contextmenu.dart  custom_inkwell.dart  large_slider.dart  panel_enum.dart  text_icon.dart  utiltity_widget.dart  visualizer.dart
lib/etc/utitity/: bloc_transformer.dart  config.dart  dart_extension.dart  gap.dart  image_provider.dart  logger.dart  math.dart
lib/i18n/: en.i18n.yaml  strings.g.dart  strings_id.g.dart
lib/logic/: time.dart  time.g.dart
lib/logic/battery/: battery.dart  battery.freezed.dart  battery.g.dart
lib/logic/brightness/: brightness.dart  brightness.g.dart
lib/logic/ipc/: ipc_bloc.dart  ipc_event.dart  ipc_state.dart
lib/logic/panel_manager/: panel_manager_bloc.dart  panel_manager_bloc.freezed.dart  panel_manager_event.dart  panel_manager_state.dart
lib/logic/screen_manager/: panel_enum.dart  (+6 more)
lib/screen/: screen_manager.dart
lib/settings/: dropdown_value.dart  enums.dart  settings.dart  settings_screen.dart  settings_section.dart
lib/widgets/: utility.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/nix/: devshell.nix  fake-rustup.sh
linux/runner/: my_application.cc
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: appmenu.rs  battery.rs  brightness.rs  display_info.rs  hyprland.rs  init.rs  mod.rs  mpris.rs  notifications.rs  time.rs  wifi.rs  wireplumber.rs
rust/src/api/appmenu/: appmenu_items.rs  mod.rs
rust/src/api/ipc/: ipc.rs  mod.rs  types.rs
rust/src/api/mpris/: cava.rs  mod.rs  mpris.rs
rust/src/api/quick_settings/: battery.rs  display_brightness.rs  mod.rs  whoami.rs
rust/src/api/quick_settings/network/: mod.rs  network_devices.rs  wlan.rs
rust/src/api/wm_interface/: base.rs  mod.rs  niri.rs
rust/src/utils/: misc.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_kitshell.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_kitshell.podspec
rust_builder/windows/: CMakeLists.txt
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: layer_shell_manager.rs  lib.rs  main.rs
src-tauri/src/widgets/: init.rs
src/logic/: color_theme.ts
test/: widget_test.dart
(+162 files in other folders)
