[package]
name = "rust_lib_kitshell"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
futures = "0.3.31"
anyhow = "1.0.98"
log = "0.4.27"
notify = "8.1.0"
display-info = "0.5.4"
brightness = "0.5.0"
whoami = "=1.6.0"
battery = "0.7.8"
chrono = "0.4.41"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
