[package]
name = "rust_lib_kitshell"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
futures = "0.3.31"
anyhow = "1.0.98"
log = "0.4.27"
notify = "8.1.0"
display-info = "0.5.4"
brightness = "0.5.0"
whoami = "=1.6.0"
battery = "0.7.8"
chrono = "0.4.41"
zbus = "5.9.0"
rand = "0.9.2"
freedesktop-desktop-entry = "0.7.14"
freedesktop-icons = "0.4.0"
sha2 = "0.10.9"
base16ct = { version = "0.3.0", features = ["alloc"] }
nix = { version = "0.30.1", features = ["process"] }
libc = "0.2.175"
niri-ipc = "25.8.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
