[package]
name = "kitshell"
version = "0.1.0"
description = "Minimalistic panel for aquamarine/wlroots based compositors."
authors = ["bootloopmaster636"]
edition = "2021"

[lib]
name = "kitshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gtk = "0.18.2"
gtk-layer-shell = { version = "0.8.2", features = ["v0_6"] }
